Le aguegue estilo a mi pagina

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<body>
-		<h1>Si que tal.</h1>
-		<h3>Si que tal.</h1>
+		<div style="background:yellow;border:2px dotted green;">
+		<h1 style="color:blue;">Si que tal.</h1>
+		<h3 style="color:pink;">Si que tal.</h1>
+		</div>
 	</body>
 </html>
