--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<body>
 		<div style="background:yellow;border:2px dotted green;">
 		<h1 style="color:blue;">Si que tal.</h1>
-		<h3 style="color:pink;">Si que tal.</h1>
+		<h3 style="color:pink;">Si que onda.</h1>
 		</div>
 	</body>
 </html>
